Fix: stop webkit ignoring overflow of flex boxes

--- a/assets/prism.css
+++ b/assets/prism.css
@@ -32,7 +32,7 @@ pre[class*="language-"] {
 pre[class*="language-"] {
 	padding: 1em;
 	margin: .5em 0;
-	overflow-x: scroll;
+	overflow: auto;
 	border-radius: 0.3em;
 }
 
